# EBEAM_dashboard

./: .env.example  .gitignore  .gitmodules  EBEAM_DASHBOARD.spec  README.md  com_ports.json  dashboard.py  dict_logger.py  instrumentctl.py  log_export_2026-02-27_13-50-47.txt  log_export_2026-02-27_14-02-38.txt  main.py  pyproject.toml  requirements.txt  subsystem.py  test.py  test.txt  test2.py  utils.py
EBEAM-Dashboard-Logs/: disconnected_usb_cable_log_2024-11-11_16-26-34.txt  initiated_app_while_sic_in_error_mode_log_2024-11-11_16-27-32.txt  log_2024-12-08_17-47-26.txt  log_2024-12-08_19-08-52.txt  log_2024-12-08_21-18-37.txt  log_2024-12-08_21-24-22.txt  log_2024-12-09_16-29-30.txt  log_2024-12-09_17-04-19.txt  log_2024-12-09_17-08-01.txt  log_2024-12-09_17-10-43.txt  log_2024-12-09_17-13-14.txt  log_2025-02-05_16-13-12.txt  log_2025-02-05_16-27-48.txt  usb_disconnect_log.txt
citestfiles/: startup_logging_test.py
db/: supabase_client.py
docs/: CHANGELOG.md  beam_pulse_test_plan.md  beam_pulse_user_test_plan.html  beam_pulse_user_test_plan.md
instrumentctl/: E5CN_modbus.py  ES440_cathode.py  ES5CN_modbus.py  README.md  Untitled-1.ipynb  __init__.py  errorTests.py  g9_driver.py  power_supply_9014.py  power_supply_9104.py
scripts/: 9104_com_profiler.py  9104emulator.ino  LaB6_V-I_heater_characteristic.py  __init__.py  log_export_2025-03-04_15-13-47.txt  test.py
simulator/: __init__.py  instruments.py  run_simulator.py  sim_gui.py  virtual_serial.py
subsystem/: __init__.py  cathode_heating.py  environmental.py  interlocks.py  oil_system.py  vtrx.py  (+1 more)
(+108 files in other folders)
