[project]
name = "ebeam-dashboard"
version = "0.1.0"
description = "EBEAM System Dashboard Software"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "pytest==9.0.2",
    "picosdk==1.0",
    "pymodbus==3.7.3",
    "pyserial==3.5",
    "scipy==1.14.1",
    "tkdial==0.0.7",
    "pandas==2.1.3",
    "supabase==2.28.3",
    "python-dotenv==1.2.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []